// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PaymentMethodBubble renders correctly 1`] = `
<Bubble
  color="primary-mild"
  disabled={true}
  iconSize={12}
>
  SEPA
</Bubble>
`;

exports[`PaymentMethodBubble renders correctly when there is a link 1`] = `
<Bubble
  color="primary-mild"
  disabled={false}
  iconId="externalLink"
  iconSize={12}
  onPress={[Function]}
>
  Revolut
</Bubble>
`;
